[package]
name = "sswm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0.181", default-features = false, features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber ="0.3.17"
x11 = "2.21.0"
xcb = { version = "1.2.2", features = ["xkb"] }
xcb-util = { version = "0.4.0", features = ["ewmh", "icccm"] }
