[package]
name = "sswm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
penrose = "0.3.3"
penrose_ui = "0.3.3"
serde = { version = "1.0.181", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber ="0.3.17"
